# tele-convo

./: .env.example  .gitignore  README.md  pyproject.toml
plans/: tele-convo-plan.md
src/tele_convo/: __init__.py  __main__.py  config.py  db.py  main.py  server.py  telegram.py
